source/stylesheets/application.css.scss
@import url(http://fonts.googleapis.com/css?family=Alex+Brush);
@import "compass";
@import 'vendor/media-queries';
@import 'vendor/icomoon';

@import 'vendor/animate/properties';
@import 'vendor/animate/tada';
@import 'vendor/animate/swing';
@import 'vendor/animate/pulse';
@import 'vendor/animate/bounceInDown';

$yellow: HSLA(35.00, 85.71%, 97.25%, 1.00);
$purple: HSLA(310.71, 35.44%, 30.98%, 1.00);
$pink: HSLA(358.06, 73.81%, 67.06%, 1.00);
$blue: HSLA(203.48, 21.10%, 57.25%, 1.00);

$navBgColor: HSLA(203.48, 21.10%, 57.25%, 0.7);
$navColor: $yellow;

html, body { height: 100%; }
body {
  font-family: 'Avenir Next';
  margin: 0;
}

.nav {
  background-color: $navBgColor;
  list-style-type: none;
  margin: 0;
  padding: 0;
  position: fixed;
  bottom: 2vh;
  width: 100vw;
  height: 50px;
  font-size: 28px;
  line-height: 50px;
  display: table;
  table-layout: fixed;

  li {
    display: table-cell;
    text-align: center;

    &.active {
      a {
        color: $purple;
      }
    }

    a {
      text-decoration: none;
      color: $navColor;
      text-shadow: 0 0 0 #000;

      &:hover {
        color: $purple;
      }
    }
  }
}

.wrapper {
  display: table;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

section {
  display: table-cell;
  vertical-align: middle;
}

.intro {
  background-color: $yellow;
  text-align: center;

  h1 {
    @include tada(2s, 0.2s, ease, both, hidden);

    font-family: 'Alex Brush', cursive;
    font-size: 60px;
    color: HSLA(0.48, 83.89%, 70.78%, 1.00);
  }
  h2 {
    font-family: 'Avenir Next';
    font-size: 32px;
    font-weight: 500;
    color: $purple;
  }
  h3 {
    @include swing(2s, 3s, ease, both, visible);

    font-family: 'Alex Brush', cursive;
    color: $pink;
  }
  a {
    @include bounceInDown(2s, 1s, ease, both, hidden);

    display: inline-block;
    background-color: $purple;
    padding: 16px;
    font-size: 14px;
    color: $yellow;
    text-decoration: none;

    &:hover {
      color: $purple;
      background-color: $pink;
    }
  }
}

.photos {
  text-align: center;
  background-color: $yellow;

  & > div {
    @include min-screen(768px) {
      width: 50%;
      display: inline-block;
    }
  }

  h3 {
    margin: 30px 0 0 0;
    font-family: 'Avenir Next';
    color: $pink;
    font-weight: 100;
  }

  .photo {
    $photo_size: 200px;

    width: $photo_size;
    height: $photo_size;
    border-radius: $photo_size / 2;
    margin: 0 auto;
    box-shadow: 0 0 6px HSLA(0.00, 0.00%, 0.00%, 0.60);
    background-size: $photo_size;
    border: #fff solid 4px;
  }
  .photo-jun {
    @include bounceInDown(1s, 1s, ease, both, hidden);
    background-image: image-url('jun.jpg');

    @include hdpi {
      background-image: image-url('jun@2x.jpg');
    }
  }
  .photo-xiang {
    @include bounceInDown(2s, 1s, ease, both, hidden);
    background-image: image-url('xiang.jpg');

    @include hdpi {
      background-image: image-url('xiang@2x.jpg');
    }
  }
}

.venue {
  #map-canvas {
    width: 100vw;
    height: 100vh;
  }
}

.day {
  background-color: $yellow;
  text-align: center;

  h1 {
    color: $pink;
    font-weight: 100;
  }
  h2 {
    color: $purple;
  }
  .countdown-wrapper {
    @include pulse(2.7s, 1s, ease, both, hidden);
    -webkit-animation-iteration-count: infinite;

    text-decoration: none;
    width: 150px;
    height: 150px;
    background-color: $pink;
    color: $yellow;
    display: inline-block;
    line-height: 150px;
    font-family: 'Alex Brush', cursive;
    font-size: 24px;
  }
}

